Fix event list articles getting squished in IE11

--- a/styleguide/source/assets/scss/02-molecules/_event-stub.scss
+++ b/styleguide/source/assets/scss/02-molecules/_event-stub.scss
@@ -1,10 +1,7 @@
 .ama__event-stub {
   @include gutter($margin-bottom-full...);
 
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  align-items: center;
+
 
   a {
     @extend %ama__link--no-underline;
